--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-markdown": "^10.1.0",
+    "reactflow": "^11.11.4",
     "remark-gfm": "^4.0.1",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.0.1",
