--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.1",
+    "firebase": "^11.10.0",
     "imagekit": "^6.0.0",
     "inngest": "^3.39.2",
     "lucide-react": "^0.474.0",
